feat: add WhatsApp integration in contact section

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -125,6 +125,7 @@
             "email": "Email",
             "location": "Location",
             "phone": "Phone",
+            "whatsapp": "WhatsApp",
             "social": "Social Media",
             "name": "Name",
             "message": "Message"
